--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -23,7 +24,7 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
-        fab:menu_icon="@drawable/open_menu_24"
+        fab:menu_icon="@drawable/ic_menu_white_24dp"
         fab:menu_fab_size="normal"
         fab:menu_labels_ellipsize="end"
         fab:menu_labels_singleLine="true"
@@ -37,7 +38,7 @@
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/btnFabShare"
-            android:src="@drawable/ic_add_white_24dp"
+            android:src="@drawable/ic_share_white_24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
