--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,48 +1,56 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/drawer_layout"
     tools:context=".MainActivity">
 
+    <include layout="@layout/include_list_main"/>
 
-    <ListView
-        android:id="@+id/lvItemList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
-
-    <com.github.clans.fab.FloatingActionMenu
-        android:id="@+id/menu_down"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:elevation="6dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="10dp"
-        fab:menu_icon="@drawable/ic_menu_white_24dp"
-        fab:menu_fab_size="normal"
-        fab:menu_labels_ellipsize="end"
-        fab:menu_labels_singleLine="true"
-        fab:menu_openDirection="up">
-
-        <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/btnFabAddItem"
-            android:src="@drawable/ic_add_white_24dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/btnFabShare"
-            android:src="@drawable/ic_share_white_24dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/drawer_menu"/>
 
 
-    </com.github.clans.fab.FloatingActionMenu>
 
-</RelativeLayout>
+    <!--<com.github.clans.fab.FloatingActionMenu-->
+        <!--android:id="@+id/menu_down"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:elevation="6dp"-->
+        <!--android:paddingBottom="10dp"-->
+        <!--android:paddingLeft="10dp"-->
+        <!--android:paddingRight="10dp"-->
+        <!--android:paddingTop="10dp"-->
+        <!--fab:menu_icon="@drawable/ic_menu_white_24dp"-->
+        <!--fab:menu_fab_size="normal"-->
+        <!--fab:menu_labels_ellipsize="end"-->
+        <!--fab:menu_labels_singleLine="true"-->
+        <!--fab:menu_openDirection="up">-->
+
+        <!--<com.github.clans.fab.FloatingActionButton-->
+            <!--android:id="@+id/btnFabAddItem"-->
+            <!--android:src="@drawable/ic_add_white_24dp"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+
+        <!--<com.github.clans.fab.FloatingActionButton-->
+            <!--android:id="@+id/btnFabShare"-->
+            <!--android:src="@drawable/ic_share_white_24dp"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+
+
+    <!--</com.github.clans.fab.FloatingActionMenu>-->
+
+</android.support.v4.widget.DrawerLayout>
