--- a/app/src/main/res/layout/add_item_dialog.xml
+++ b/app/src/main/res/layout/add_item_dialog.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <EditText
         android:id="@+id/edtItemName"
+        android:hint="Item Name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Item name" />
+        android:layout_height="wrap_content" />
 
     <EditText
+        android:inputType="number"
         android:id="@+id/edtItemQty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Item quantitty"
-        android:inputType="number" />
+        android:hint="Item Quantity" />
+
 </LinearLayout>
